<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!-- 标题栏 -->
    <include
        android:id="@+id/layout_title_bar"
        layout="@layout/layout_title_bar"/>

    <LinearLayout
        android:id="@+id/layout_str_regex_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_title_bar"
        android:orientation="vertical"
        android:padding="@dimen/spacing_vertical_medium">

        <!-- 分割字符串 -->
        <TextView
            android:id="@+id/tv_split_str"
            style="bold|italic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:minHeight="48dp"
            android:text="@string/split_string"
            android:textColor="@color/colorBlue"
            android:textSize="@dimen/text_size_medium"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/colorLightGray"/>

        <!-- 正则表达式 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_regex_title"
                style="bold|italic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:minHeight="48dp"
                android:text="@string/regex_three"
                android:textColor="@color/colorBlue"
                android:textSize="@dimen/text_size_medium"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_vertical_medium"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_substring_extend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spacing_vertical_small"
                    android:text="1.substring扩展函数"
                    android:textColor="@color/colorDarkGray"
                    android:textSize="@dimen/text_size_small"/>

                <TextView
                    android:id="@+id/tv_regex_three"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/spacing_vertical_small"
                    android:text="2.三重引号"
                    android:textColor="@color/colorDarkGray"
                    android:textSize="@dimen/text_size_small"/>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/colorLightGray"/>

        <TextView
            android:id="@+id/tv_multiline"
            style="bold|italic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:minHeight="48dp"
            android:text="@string/three_multiline"
            android:textColor="@color/colorBlue"
            android:textSize="@dimen/text_size_medium"/>


    </LinearLayout>

</RelativeLayout>
